# pytorch3d-samples

./: .gitignore  build_and_push.sh
.github/workflows/: deploy-and-build.yml
cdk/: README.md  app.py  cdk.json  fix_permissions.sh  github_action_role_setup.sh  gpu_batch_stack.py  package-lock.json  package.json  setup.sh  setup_github_secrets.sh  trust-policy.json  update_iam_permissions.sh  update_iam_permissions_v2.sh
infrastructure/: gpu-instance.yml
src/: Dockerfile  pyproject.toml
